8207211: [TESTBUG] Remove excessive output from CDS/AppCDS tests
Changed the value of the property test.cds.copy.child.stdout to false so that stdout of child processes are logged in files. Each stdout and stderr file will have a unique name.

Reviewed-by: iklam